@@ -1,3 +1,7 @@
+1999-01-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* pixmap_theme_main.c (theme_init): Turn on pixmap cache. 
+
 Mon Jan 18 13:37:23 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* Theme/gtk/gtkrc: Give buttons a gray background
